# discord-uploader

./: .gitignore  CHANGELOG.md  Earthfile  cabal-common.project  cabal-scaffold.yaml  cabal-wasm.project  cabal.project.freeze  discord-uploader.cabal
.github/workflows/: build.yml
app/: Main.hs
cloudflare-kv-manager/: CHANGELOG.md  README.md  cloudflare-kv-manager.cabal
cloudflare-kv-manager-core/: CHANGELOG.md  README.md  cloudflare-kv-manager-core.cabal
cloudflare-kv-manager-core/src/Network/Cloudflare/Worker/KVManager/: Types.hs
cloudflare-kv-manager/app/: Main.hs
cloudflare-kv-manager/data/worker-template/: wrangler.toml
cloudflare-kv-manager/src/Development/GitHub/Discord/Upload/: Worker.hs
discord-uploader/: CHANGELOG.md  README copy.md  README.md  discord-uploader.cabal
discord-uploader/src/Development/GitHub/Discord/: Upload.hs
discord-uploader/src/Effectful/Network/: Discord.hs
discord-uploader/src/Effectful/Network/Cloudflare/Workers/: KV.hs
src/Development/GitHub/Discord/: Upload.hs
src/Effectful/Network/: Discord.hs
src/Effectful/Network/Cloudflare/Workers/: KV.hs
