cabal-version: 3.0
name: discord-uploader
version: 0.2.0.2
description: Please see the README on GitHub at <https://github.com/konn/discord-uploader#readme>
homepage: https://github.com/konn/discord-uploader#readme
bug-reports: https://github.com/konn/discord-uploader/issues
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: 2024 (c) Hiromi ISHII
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/discord-uploader

common defaults
  other-modules: Paths_discord_uploader
  autogen-modules: Paths_discord_uploader
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  build-tool-depends: cabal-gild:cabal-gild >=1.3.1.0
  build-depends: base >=4.7 && <5
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    GADTs
    GeneralisedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    StandaloneDeriving
    TypeFamilies
    TypeOperators
    UndecidableInstances

common exe
  import: defaults
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: defaults
  -- cabal-gild: discover src --include=src/**/*.hs
  exposed-modules:
    Development.GitHub.Discord.Upload
    Effectful.Network.Cloudflare.Workers.KV
    Effectful.Network.Discord

  hs-source-dirs: src
  build-depends:
    aeson,
    bytestring,
    cloudflare-kv-manager-core,
    effectful,
    foldl,
    generic-lens,
    hashable,
    http-client,
    lens,
    log-effectful-extra,
    optparse-applicative,
    path-tagged,
    path-tagged-effectful,
    resourcet-effectful,
    safe-exceptions,
    steward-client,
    steward-core,
    streaming,
    streaming-SHA,
    streaming-bytestring,
    streaming-http-effectful,
    text,
    time,
    time-effectful,
    unordered-containers,
    vector,
    yaml,

executable discord-uploader
  import: exe
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: discord-uploader

test-suite discord-uploader-test
  import: exe
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  -- cabal-gild: discover test --include=test/**/*.hs --exclude=test/Spec.hs
  other-modules:
  build-depends: discord-uploader
